# tauri-fetch

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yaml
src/: App.tsx  RenderJson.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: json.rs  macros.rs  main.rs
src/scripts/: json.ts
